fixed item list sizing to not cut off weapon filters

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -46,6 +46,7 @@ h2 {
 	flex-grow: 1;
 	flex-basis: 0;
 	margin:8px;	
+	min-width: 350px;
 }
 
 .stats-container {
